Change photo descriptions to present tense

--- a/content/projects/bird-photography/cuban-grassquit/20230425-6.md
+++ b/content/projects/bird-photography/cuban-grassquit/20230425-6.md
@@ -3,5 +3,5 @@ weight: 930
 image: "cuban-grassquit/20230425-6.jpg"
 width: 2688
 height: 3525
-description: "A cuban grassquit atop a short branch, looking into the camera<br/>f/6.3, 1/640, 300mm, iso400"
+description: "A male cuban grassquit, atop a short branch, looks into the camera<br/>f/6.3, 1/640, 300mm, iso400"
 ---
