--- a/content/projects/bird-photography/tricolored-heron/20230407-2.md
+++ b/content/projects/bird-photography/tricolored-heron/20230407-2.md
@@ -3,5 +3,5 @@ weight: 980
 image: "tricolored-heron/20230407-2.jpg"
 width: 4536
 height: 3345
-description: "A tricolored heron standing on the roots of a mangrove tree<br/>f/4.8, 1/400, 100mm, iso800"
+description: "A tricolored heron stands on the roots of a mangrove tree<br/>f/4.8, 1/400, 100mm, iso800"
 ---
