--- a/content/projects/bird-photography/yellow-crowned-night-heron/20230407-2.md
+++ b/content/projects/bird-photography/yellow-crowned-night-heron/20230407-2.md
@@ -3,5 +3,5 @@ weight: 900
 image: "yellow-crowned-night-heron/20230407-2.jpg"
 width: 6000
 height: 4000
-description: "A yellow-crowned night heron perched on a lichen-encrusted tree branch<br/>f/6.3, 1/125, 300mm, iso800"
+description: "A yellow-crowned night heron perches on a lichen-encrusted tree branch<br/>f/6.3, 1/125, 300mm, iso800"
 ---
